--- a/src/main/resources/templates/blocks/nav.html
+++ b/src/main/resources/templates/blocks/nav.html
@@ -8,6 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/">Услуги</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about">О нас</a></li>
                 <li th:if="${role == 'ADMIN'}" class="nav-item"><a class="nav-link" href="/category">Виды причесок</a></li>
                 <li th:if="${role == 'MASTER'}" class="nav-item"><a class="nav-link" href="/master">Мой профиль</a></li>
                 <li th:if="${role != 'NOT'}" class="nav-item"><a class="nav-link" href="/masters">Команда</a></li>
